Fix sidebar z-index issue

--- a/css/blocks/sidebar.css
+++ b/css/blocks/sidebar.css
@@ -84,7 +84,7 @@
     position: sticky;
     top: 2rem;
     height: auto;
-    z-index: 1;
+    z-index: 0;
   }
 
   .sidebar__header {
